--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
         <script defer src="main.js"></script>
     </head>
     <body>
-        
+        <header></header>
+        <main></main>
+        <footer></footer>
     </body>
 </html>
