--- a/index.html
+++ b/index.html
@@ -5,13 +5,29 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Dark Kitchen</title>
-        <!--<link rel="icon" href="assets/icons/website-icon.ico">-->
+        <link rel="icon" href="assets/icons/website-icon.ico">
         <link rel="stylesheet" href="assets/css/style.css">
         <script defer src="main.js"></script>
     </head>
     <body>
         <header></header>
-        <main></main>
+        <main>
+            <section class="dinner">
+                <div class="dinner_item">
+                    <img src="assets/img/default.png" alt="">
+                    <div class="dinner_item_content">
+                        <h1 class="dinner_item_content_name">Product name</h1>
+                        <div class="dinner_item_content_ingredients">
+                            <div class="dinner_item_content_ingredients_desc">
+                                <p>Ingredient a, ingredient b, ingredient c, ...</p>
+                            </div>
+                            <div class="dinner_item_content_ingredients_price">2.99€</div>
+                            <button class="dinner_item_content_ingredients_shop">Panier</button>
+                        </div>
+                    </div>
+                </div>
+            </section>
+        </main>
         <footer></footer>
     </body>
 </html>
