--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Dark Kitchen</title>
-        <!--<link rel="icon" href="assets/icons/website-icon.ico">-->
+        <link rel="icon" href="assets/img/logo.jpg">
         <link rel="stylesheet" href="assets/css/style.css">
         <script defer src="main.js"></script>
     </head>
