added header html

--- a/index.html
+++ b/index.html
@@ -10,7 +10,17 @@
         <script defer src="main.js"></script>
     </head>
     <body>
-        <header></header>
+        <header>
+            <nav class="nav">
+                <button>
+                    <img class="nav__icon" src="assets/img/sun.png" alt="Dark mode button">
+                </button>
+                <img class="nav__logo" src="assets/img/" alt="Logo">
+                <button>
+                    <img class="nav__icon" src="assets/img/shopping-cart.png" alt="shopping cart">
+                </button>
+            </nav>
+        </header>
         <main></main>
         <footer></footer>
     </body>
