--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
     <body>
         <header>
             <nav class="nav">
-                <button>
-                    <img class="nav__icon" src="assets/img/sun.png" alt="Dark mode button">
+                <button class="nav__button">
+                    <img class="nav__button__icon" src="assets/img/sun.png" alt="Dark mode button">
                 </button>
                 <img class="nav__logo" src="assets/img/" alt="Logo">
-                <button>
-                    <img class="nav__icon" src="assets/img/shopping-cart.png" alt="shopping cart">
+                <button class="nav__button">
+                    <img class="nav__button__icon" src="assets/img/shopping-cart.png" alt="shopping cart">
                 </button>
             </nav>
         </header>
