display logo and icon with responsive

--- a/index.html
+++ b/index.html
@@ -12,13 +12,20 @@
     <body>
         <header>
             <nav class="nav">
-                <button class="nav__button">
-                    <img class="nav__button__icon" src="assets/img/sun.png" alt="Dark mode button">
-                </button>
-                <img class="nav__logo" src="assets/img/" alt="Logo">
-                <button class="nav__button">
-                    <img class="nav__button__icon" src="assets/img/shopping-cart.png" alt="shopping cart">
-                </button>
+                <div class="nav__div__button">
+                    <button class="nav__button">
+                        <img class="nav__button__icon" src="assets/img/sun.png" alt="Dark mode button">
+                    </button>
+                </div>
+                <div class="nav__div">
+                    <img class="nav__div__logo" src="assets/img/logo.jpg" alt="Logo">
+                
+                </div>
+                <div class="nav__div__button">
+                    <button class="nav__button">
+                        <img class="nav__button__icon" src="assets/img/shopping-cart.png" alt="shopping cart">
+                    </button>
+                </div>
             </nav>
         </header>
         <main></main>
