--- a/index.html
+++ b/index.html
@@ -10,7 +10,24 @@
         <script defer src="main.js"></script>
     </head>
     <body>
-        <header></header>
+        <header>
+            <nav class="nav">
+                <div class="nav__div__button">
+                    <button class="nav__button">
+                        <img class="nav__button__icon" src="assets/img/sun.png" alt="Dark mode button">
+                    </button>
+                </div>
+                <div class="nav__div">
+                    <img class="nav__div__logo" src="assets/img/logo.jpg" alt="Logo">
+                
+                </div>
+                <div class="nav__div__button">
+                    <button class="nav__button">
+                        <img class="nav__button__icon" src="assets/img/shopping-cart.png" alt="shopping cart">
+                    </button>
+                </div>
+            </nav>
+        </header>
         <main>
             <section id="dinner"></section>
         </main>
