Added title scss, Display imagebackground, title, subtitle and description

--- a/index.html
+++ b/index.html
@@ -29,6 +29,20 @@
             </nav>
         </header>
         <main>
+            <section class="title" style="background-image: url('assets/img/title_background.jpg');">
+                <div class="title__text">
+                    <h1 class="title__text__main">Take Awish</h1>
+                    <h2 class="title__text__subtitle">Order now !</h2>
+                    <p class="title__text__description">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+                        Nulla tempus finibus ligula nec luctus. Phasellus ornare ante quis augue pretium, nec aliquet nisl dictum. Vestibulum sed porttitor arcu. 
+                        Aenean sit amet fermentum augue. Donec fringilla viverra orci, eget facilisis ex vulputate ac. Proin id nibh dolor. 
+                        Praesent risus leo, facilisis ac commodo eu, viverra non mi. Donec tristique nunc eget ligula gravida commodo. Nulla facilisi. 
+                        Fusce risus velit, ornare id ornare eget, scelerisque at ante. In viverra nisl at eros dapibus, et bibendum tellus lacinia. Vivamus et nisi est. 
+                        Duis venenatis, quam non feugiat convallis, eros mauris ultrices dolor, at porttitor nisl diam non lectus. Phasellus quis elementum mi.
+                    </p>
+                </div>
+            </section>
             <section id="dinner"></section>
         </main>
         <footer></footer>
