--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
                 </div>
                 <div class="nav__div">
                     <img class="nav__div__logo" src="assets/img/logo.jpg" alt="Logo">
+                
                 </div>
                 <div class="nav__div__button">
                     <button class="nav__button">
@@ -28,6 +29,44 @@
             </nav>
         </header>
         <main>
+            <!---------------BUTTON FILTER----------------------->
+            <div class="button__filter">
+                <div class="button1">
+                    <p>Oeuf</p>
+                    <label class="switch">
+                        <input type="checkbox" class="button__oeuf">
+                        <span class="slider round"></span>
+                    </label>
+                </div>
+                <div class="button2">
+                    <p>Frite</p>
+                    <label class="switch">
+                        <input type="checkbox" class="button__frite">
+                        <span class="slider round"></span>
+                    </label>
+                </div>
+                <div class="button3">
+                    <p>Pâtes</p>
+                    <label class="switch">
+                        <input type="checkbox" class="button__pate">
+                        <span class="slider round"></span>
+                    </label>
+                </div>
+                <div class="button4">
+                    <p>Pizza</p>
+                    <label class="switch">
+                        <input type="checkbox" class="button__pizza">
+                        <span class="slider round"></span>
+                    </label>
+                </div>
+                <div class="button5">
+                    <p>Maki</p>
+                    <label class="switch">
+                        <input type="checkbox" class="button__maki">
+                        <span class="slider round"></span>
+                    </label>
+                </div>
+            </div>
             <section id="dinner"></section>
         </main>
         <footer></footer>
