ajout des img E3

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <!---------------BUTTON FILTER----------------------->
             <div class="button__filter">
                 <div class="button1">
-                    <p>Oeuf</p>
+                    <p class="button__title">Oeuf</p>
                     <label class="switch">
                         <input type="checkbox" class="button__oeuf">
                         <span class="slider round"></span>
