changement name class button__filter + base css button

--- a/index.html
+++ b/index.html
@@ -48,35 +48,35 @@
                 <div class="button1">
                     <p class="button__title">Oeuf</p>
                     <label class="switch">
-                        <input type="checkbox" class="button__oeuf">
+                        <input type="checkbox" class="button__filter">
                         <span class="slider round"></span>
                     </label>
                 </div>
-                <div class="button2">
-                    <p>Frite</p>
+                <div class="button1">
+                    <p class="button__title">Frite</p>
                     <label class="switch">
-                        <input type="checkbox" class="button__frite">
+                        <input type="checkbox" class="button__filter">
                         <span class="slider round"></span>
                     </label>
                 </div>
-                <div class="button3">
-                    <p>Pâtes</p>
+                <div class="button1">
+                    <p class="button__title">Pâtes</p>
                     <label class="switch">
-                        <input type="checkbox" class="button__pate">
+                        <input type="checkbox" class="button__filter">
                         <span class="slider round"></span>
                     </label>
                 </div>
-                <div class="button4">
-                    <p>Pizza</p>
+                <div class="button1">
+                    <p class="button__title">Pizza</p>
                     <label class="switch">
-                        <input type="checkbox" class="button__pizza">
+                        <input type="checkbox" class="button__filter">
                         <span class="slider round"></span>
                     </label>
                 </div>
-                <div class="button5">
-                    <p>Maki</p>
+                <div class="button1">
+                    <p class="button__title">Maki</p>
                     <label class="switch">
-                        <input type="checkbox" class="button__maki">
+                        <input type="checkbox" class="button__filter">
                         <span class="slider round"></span>
                     </label>
                 </div>
