Simplification of filters

--- a/index.html
+++ b/index.html
@@ -44,43 +44,8 @@
                 </div>
             </section>
             <!---------------BUTTON FILTER----------------------->
-            <div class="button__filter">
-                <div class="button1">
-                    <p class="button__title">Oeuf</p>
-                    <label class="switch">
-                        <input type="checkbox" class="button__filter">
-                        <span class="slider round"></span>
-                    </label>
-                </div>
-                <div class="button1">
-                    <p class="button__title">Frite</p>
-                    <label class="switch">
-                        <input type="checkbox" class="button__filter">
-                        <span class="slider round"></span>
-                    </label>
-                </div>
-                <div class="button1">
-                    <p class="button__title">Pâtes</p>
-                    <label class="switch">
-                        <input type="checkbox" class="button__filter">
-                        <span class="slider round"></span>
-                    </label>
-                </div>
-                <div class="button1">
-                    <p class="button__title">Pizza</p>
-                    <label class="switch">
-                        <input type="checkbox" class="button__filter">
-                        <span class="slider round"></span>
-                    </label>
-                </div>
-                <div class="button1">
-                    <p class="button__title">Maki</p>
-                    <label class="switch">
-                        <input type="checkbox" class="button__filter">
-                        <span class="slider round"></span>
-                    </label>
-                </div>
-            </div>
+            <div class="button__filter"></div>
+            
             <section id="dinner"></section>
         </main>
         <footer>
