--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Dark Kitchen</title>
         <link rel="icon" href="assets/img/logo.jpg">
-        <link rel="stylesheet" href="assets/css/style.css">
+        <link id="theme" rel="stylesheet" href="assets/css/style-light-theme.css">
         <script defer src="main.js"></script>
     </head>
     <body>
         <header>
             <nav class="nav">
                 <div class="nav__div__button">
-                    <button class="nav__button">
+                    <button class="nav__button" onclick="toggleTheme()">
                         <img class="nav__button__icon" src="assets/img/sun.png" alt="Dark mode button">
                     </button>
                 </div>
