Dark mode btn logo switch

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <nav class="nav">
                 <div class="nav__div__button">
                     <button class="nav__button" onclick="toggleTheme()">
-                        <img class="nav__button__icon" src="assets/img/sun.png" alt="Dark mode button">
+                        <img id="dark__theme" class="nav__button__icon" src="assets/img/sun.png" alt="Dark mode button">
                     </button>
                 </div>
                 <div class="nav__div">
