--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         <link rel="icon" href="assets/img/logo.jpg">
         <link rel="stylesheet" href="assets/css/style.css">
         <script defer src="main.js"></script>
+        <script defer src="assets/scripts/shopping_cart.js"></script>
     </head>
     <body>
         <header>
