Added div shopping-cart

--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
                     </button>
                 </div>
             </nav>
+            <div class="shopping-cart">
+
+            </div>
         </header>
         <main>
             <section class="title" style="background-image: url('assets/img/title_background.jpg');">
