Added event to show shopping cart

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <title>Dark Kitchen</title>
         <link rel="icon" href="assets/img/logo.jpg">
         <link id="theme" rel="stylesheet" href="assets/css/style.css">
-        <script defer src="assets/scripts/panier.js"></script>
+        <script defer src="main.js"></script>
     </head>
     <body>
         <header>
