--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Dark Kitchen</title>
         <link rel="icon" href="assets/img/logo.jpg">
-        <link id="theme" rel="stylesheet" href="assets/css/style.css">
+        <link id="theme" rel="stylesheet" href="assets/css/style-dark-theme.css">
         <script defer src="main.js"></script>
     </head>
     <body>
