Add title description

--- a/index.html
+++ b/index.html
@@ -47,12 +47,10 @@
                     <h1 class="title__text__main">Take Awish</h1>
                     <h2 class="title__text__subtitle">Order now !</h2>
                     <p class="title__text__description">
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
-                        Nulla tempus finibus ligula nec luctus. Phasellus ornare ante quis augue pretium, nec aliquet nisl dictum. Vestibulum sed porttitor arcu. 
-                        Aenean sit amet fermentum augue. Donec fringilla viverra orci, eget facilisis ex vulputate ac. Proin id nibh dolor. 
-                        Praesent risus leo, facilisis ac commodo eu, viverra non mi. Donec tristique nunc eget ligula gravida commodo. Nulla facilisi. 
-                        Fusce risus velit, ornare id ornare eget, scelerisque at ante. In viverra nisl at eros dapibus, et bibendum tellus lacinia. Vivamus et nisi est. 
-                        Duis venenatis, quam non feugiat convallis, eros mauris ultrices dolor, at porttitor nisl diam non lectus. Phasellus quis elementum mi.
+                        Takeawish.com est une entreprise néerlandaise spécialisée dans la restauration à domicile avec commande en ligne.
+                        Le service proposé par Takeawish.com prend la forme d'un site internet répertoriant des restaurants et leurs menus, 
+                        et permettant aux internautes de commander leur repas en ligne et d'être livré a domicile. <br>
+                        La société est présente dans plusieurs pays européens. La société est cotée en bourse Euronext Amsterdam - Compartiment A et fait partie des indices : AEX et Next 150.
                     </p>
                 </div>
             </section>
