Change title to correspond to the project

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Dark Kitchen</title>
+        <title>Take Awish</title>
         <link rel="icon" href="assets/img/logo.jpg">
         <link id="theme" rel="stylesheet" href="assets/css/style-dark-theme.css">
         <script defer src="main.js"></script>
