--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                     <h2 class="title__text__subtitle">Order now !</h2>
                     <p class="title__text__description">
                         Takeawish.com est une entreprise néerlandaise spécialisée dans la restauration à domicile avec commande en ligne.
-                        Le service proposé par Takeawish.com prend la forme d'un site internet répertoriant des restaurants et leurs menus, 
+                        Le service proposé par Takeawish.com prend la forme d'un site internet répertoriant les menus de divers restaurant, 
                         et permettant aux internautes de commander leur repas en ligne et d'être livré a domicile. <br>
                         La société est présente dans plusieurs pays européens. La société est cotée en bourse Euronext Amsterdam - Compartiment A et fait partie des indices : AEX et Next 150.
                     </p>
