Open social media on other tabs

--- a/index.html
+++ b/index.html
@@ -70,10 +70,10 @@
                             <p>Vous pouvez nous contacter via <a href="mailto:machinchose19735@gmail.com"> notre service client</a>.</p>
                         </div>
                         <div class="item social">
-                            <a href="https://fr-fr.facebook.com/"><i class="icon ion-social-facebook"><img src="https://www.bing.com/th?id=ODLS.7d3063c3-cd17-4792-8d4f-4e98c892a389&w=32&h=32&o=6&pid=13.1" alt=""></i></a>
-                            <a href="https://twitter.com/"><i class="icon ion-social-twitter"><img src="https://www.bing.com/th?id=ODLS.622ceebf-d807-45da-bb82-707dd9e5c357&w=32&h=32&o=6&pid=13.1" alt=""></i></a>
-                            <a href="https://www.snapchat.com/fr-FR"><i class="icon ion-social-snapchat"><img src="https://www.bing.com/th?id=ODLS.e393a21f-2c82-4bd3-a875-856cbc763de5&w=32&h=32&o=6&pid=13.1" alt=""></i></a>
-                            <a href="https://www.instagram.com/"><i class="icon ion-social-instagram"><img src="https://www.bing.com/th?id=ODLS.87761550-be32-413d-91b2-fe5a5ad48298&w=32&h=32&o=6&pid=13.1" alt=""></i></a>
+                            <a href="https://fr-fr.facebook.com/" target="_blank"><i class="icon ion-social-facebook"><img src="https://www.bing.com/th?id=ODLS.7d3063c3-cd17-4792-8d4f-4e98c892a389&w=32&h=32&o=6&pid=13.1" alt=""></i></a>
+                            <a href="https://twitter.com/" target="_blank"><i class="icon ion-social-twitter"><img src="https://www.bing.com/th?id=ODLS.622ceebf-d807-45da-bb82-707dd9e5c357&w=32&h=32&o=6&pid=13.1" alt=""></i></a>
+                            <a href="https://www.snapchat.com/fr-FR" target="_blank"><i class="icon ion-social-snapchat"><img src="https://www.bing.com/th?id=ODLS.e393a21f-2c82-4bd3-a875-856cbc763de5&w=32&h=32&o=6&pid=13.1" alt=""></i></a>
+                            <a href="https://www.instagram.com/" target="_blank"><i class="icon ion-social-instagram"><img src="https://www.bing.com/th?id=ODLS.87761550-be32-413d-91b2-fe5a5ad48298&w=32&h=32&o=6&pid=13.1" alt=""></i></a>
                         </div>
                     </div>
                     <p class="copyright">Takeawish © 2022</p>
